# template

./: .gitignore  .hook-test-tmp  CLAUDE.md  harness.config.yaml  opencode.json  pyproject.toml  readme.md
.claude/: settings.json
.claude-state/: backlog.md  claude-progress.txt  decisions.md  evaluation-report.md  feature-list.json  harness-version.md  learnings.md  metrics.json  product-spec.md  review-notes.md  sprint-contract.md
.claude/agents/: code-reviewer.md  common-module-writer.md  dataflow-writer.md  evaluator.md  implementer.md  integration-fixer.md  plan-writer.md  planner.md  policy-updater.md  prd-writer.md  requirement-writer.md  retrospective.md  reviewer.md  sprint-builder.md  stack-selector.md  state-writer.md  test-implementer.md  (+4 more)
.playwright-mcp/: page-2026-04-04T12-14-04-004Z.yml
.ruler/: AGENTS.md  ruler.toml
docs/: harness-reference.md  requirement.md  stack-whitelist.md
harness/: __init__.py  __main__.py  agent_runner.py  cli.py  config.py  event_bus.py  prompt_builder.py  state_file_parser.py  state_machine.py
prompts/: 1prd.md  2userflow.md  3dataflow.md  4external.md  4usecase.md  5common-modules.md  5usecase.md  6common-modules.md  6state.md  7plan.md  7state.md  8implement.md  8plan.md  9implement.md  codebase.md  tech_stack.md
scripts/: check-thresholds.sh  collect-metrics.sh  convert_agents.py  convert_agents_opencode.py  e2e  evaluation-gate  smoke  sync-opencode.sh  unit
tests/: test_adapters.py  test_config.py  test_event_bus.py  test_prompt_builder.py  test_state_file_parser.py  test_state_machine.py  test_tools.py
(+94 files in other folders)
